[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://TemPlayer.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -48, -48, 48, -48, 48, 48, -48, 48 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 128.0

[node name="Boss" type="KinematicBody2D"]

transform/pos = Vector2( 512, 256 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }
amplitude = 10
frequency = 12
speed = 200

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -48, -48, 48, -48, 48, 48, -48, 48 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Detection" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Pos1" type="Position2D" parent="."]

transform/pos = Vector2( 96, 0 )

[node name="Sprite" type="Sprite" parent="Pos1"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Pos2" type="Position2D" parent="."]

transform/pos = Vector2( -96, 0 )

[connection signal="body_enter" from="Detection" to="." method="_on_Detection_body_enter"]

[connection signal="body_exit" from="Detection" to="." method="_on_Detection_body_exit"]


